# pwclient

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  README.rst  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
.github/workflows/: ci.yaml
docs/: conf.py  configuration.rst  contents.rst  index.rst  requirements.txt  usage.rst
man/: pwclient.1
pwclient/: __init__.py  api.py  checks.py  events.py  exceptions.py  parser.py  patches.py  people.py  projects.py  series.py  shell.py  states.py  utils.py  xmlrpc.py
releasenotes/: config.yaml
releasenotes/notes/: add-long-opts-4611e7cce3993f08.yaml  add-python-314-support-bac9466e7b918951.yaml  add-python3-10-drop-python-3-6-support-32b91d5753adfc29.yaml  add-python3-11-support-eb86886925d2e5ec.yaml  add-python3-13-support-57096ea159e1f6af.yaml  check-get-4f010b2c4fdcd55c.yaml  check-list-create-help-94ccb51660af1138.yaml  check-patch-id-82f673f7c520ca24.yaml  drop-pypy-support-17f1f95b9394b257.yaml  drop-python2-support-0351245b41052e20.yaml  git-am--m-flag-190f3a7e17cec6f4.yaml  initial-release-eb74a7ae0ce3b1fb.yaml  issue-1-c7e4c3e4e57c1c22.yaml  list--hash-option-ebb96d3a70920cf5.yaml  pwclientrc-environment-variable-e070047b82e3b77f.yaml  rest-api-support-4341d2884f8d41c8.yaml  version-2-2-0d142cb0ab85eb67.yaml  version-2-3-fd18e538b15396d8.yaml
tests/: fakes.py  test_api.py  test_checks.py  test_patches.py  test_people.py  test_projects.py  test_shell.py  test_states.py  test_utils.py
