[metadata]
name = pwclient
description = The command-line client for the Patchwork patch tracking tool
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = GPL v2
license_file = COPYING
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
keywords = patchwork api
author = Nate Case
author_email = ncase@xes-inc.com
maintainer = Stephen Finucane
maintainer_email = stephen@that.guru
url = https://github.com/getpatchwork/pwclient
project_urls =
    Bug Tracker = https://github.com/getpatchwork/pwclient/issues
    Source Code = https://github.com/getpatchwork/pwclient
    Documentation = https://pwclient.readthedocs.io
python_requires = >=3.7

[files]
packages =
    pwclient

[entry_points]
console_scripts =
    pwclient = pwclient.shell:main
