[metadata]
name = pwclient
summary = The command-line client for the Patchwork patch tracking tool
description_file =
    README.rst
license = GPL v2
license_files =
    COPYING
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
keywords = patchwork api
author = Nate Case
author_email = ncase@xes-inc.com
maintainer = Stephen Finucane
maintainer_email = stephen@that.guru
url = https://github.com/getpatchwork/pwclient
project_urls =
    Bug Tracker = https://github.com/getpatchwork/pwclient/issues
    Source Code = https://github.com/getpatchwork/pwclient
    Documentation = https://pwclient.readthedocs.io
python_requires = >=3.7

[files]
packages =
    pwclient

[entry_points]
console_scripts =
    pwclient = pwclient.shell:main
